--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
   
 </head>
 
-<body>
+<body style="background: #f4f6f8;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   
